# serverless-httpapi

./: .gitignore  Makefile  README.md  core-cf.yml  openapi.admin.yml  openapi.client.yml  package-lock.json  package.json  pyproject.toml  serverless.admin.yml  serverless.client.yml  serverless.common.yml  serverless.yml
cf/: override-policy.json  stack-policy.json
doc/: generate_schema.py
doc/api/admin/: documentation.yml  endpoints.yml
doc/api/client/: documentation.yml  endpoints.yml
doc/api/models/: ApiError.json  ApiResponse.json
doc/schema/models/: BaseTimeSeries.json  DecimalTimeSeries.json  DecimalTimeSeriesBatch.json  FloatTimeSeries.json  FloatTimeSeriesBatch.json  IntegerTimeSeries.json  IntegerTimeSeriesBatch.json  Patient.json
hearty/: constants.py  lifecycle.py  models.py
hearty/api/: models.py
hearty/api/lambdas/: echo.py
hearty/healthkit/: constants.py  manager.py
hearty/lambdas/: echo.py
hearty/oura/: api.py  api_access.py  api_models.py  constants.py  manager.py  models.py  storage.py
hearty/oura/lambdas/: client.py
hearty/utils/: aws_models.py  constants.py  credentials.py  dynamo.py  environment.py  lifecycle.py  requests.py  storage.py
hearty/utils/aws/: dynamo.py  models.py
src/: lifecycle.py
src/lambdas/: echo.py
tests/: factories.py  models.py
tests/test_healthkit/: test_manager.py
tests/test_oura/: factories.py  test_api.py  test_api_access.py  test_manager.py
tests/test_utils/: test_credentials.py  test_environment.py  test_lifecycle.py  test_requests.py  test_requests_utils.py
(+56 files in other folders)
