[tool.poetry]
name = "hearty"
version = "0.1.0"
description = ""
authors = ["David Jetter <davidajetter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["email"], version = "^1.8.2"}
python-json-logger = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
mypy = "^0.910"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
types-requests = "^2.25.0"
types-six = "^0.1.7"
Faker = "^8.10.3"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["faker", "pythonjsonlogger", "factory"]
ignore_missing_imports = true
